--- a/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
+++ b/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print" pageWidth="595" pageHeight="421" orientation="Landscape" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -47,48 +47,48 @@ FROM
 	<group name="family_id" keepTogether="true">
 		<groupExpression><![CDATA[$F{family.id}]]></groupExpression>
 		<groupHeader>
-			<band height="38">
+			<band height="33">
+				<line>
+					<reportElement x="0" y="0" width="555" height="1"/>
+				</line>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="4" width="178" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="4" width="178" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.lastName}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="4" width="210" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="4" width="210" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.street}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="388" y="4" width="47" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="388" y="4" width="47" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.postalCode}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="435" y="4" width="120" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="435" y="4" width="120" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.city}]]></textFieldExpression>
 				</textField>
+				<line>
+					<reportElement positionType="Float" x="0" y="18" width="555" height="1" forecolor="#FFFFFF"/>
+				</line>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="82" y="21" width="157" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" x="82" y="19" width="157" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact1}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="236" y="21" width="157" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" x="236" y="19" width="157" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact2}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="393" y="21" width="162" height="16" isRemoveLineWhenBlank="true"/>
+					<reportElement positionType="Float" x="393" y="19" width="162" height="14" isRemoveLineWhenBlank="true"/>
 					<textElement/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact3}]]></textFieldExpression>
 				</textField>
-				<line>
-					<reportElement x="0" y="0" width="555" height="1"/>
-				</line>
-				<line>
-					<reportElement positionType="Float" x="0" y="20" width="555" height="1" forecolor="#FFFFFF"/>
-				</line>
 			</band>
 		</groupHeader>
 		<groupFooter>
@@ -99,16 +99,16 @@ FROM
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="241" splitType="Stretch">
+		<band height="234" splitType="Stretch">
 			<staticText>
-				<reportElement positionType="Float" x="0" y="0" width="318" height="30"/>
+				<reportElement positionType="Float" x="0" y="0" width="328" height="30"/>
 				<textElement>
 					<font size="22" isBold="true" isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[Gemeindeverzeichnis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="40" width="318" height="43"/>
+				<reportElement positionType="Float" x="0" y="40" width="328" height="43"/>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
@@ -116,63 +116,63 @@ FROM
 Calvary Chapel Hannover]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="83" width="318" height="71"/>
+				<reportElement positionType="Float" x="0" y="83" width="328" height="71"/>
 				<textElement/>
-				<text><![CDATA[Herrenstr. 10 - 30159 Hannover
+				<text><![CDATA[Herrenstr. 10 - 30159 Hannover - office@koinonia-gemeinde.de
 Tel. Büro: 0511-1614643 - Fax 0511-1614639
 Konto-Nr. 616915 - EKK Hannover - BLZ 52060410
 
 Tel. Gemeindecafé - 0511-1319710]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="154" width="318" height="23"/>
+				<reportElement positionType="Float" x="0" y="154" width="328" height="23"/>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Kindertagesstätte Löwenkinder]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="177" width="318" height="22"/>
+				<reportElement positionType="Float" x="0" y="177" width="328" height="22"/>
 				<textElement/>
 				<text><![CDATA[Odeonstr. 6 - 30159 Hannover - Tel. 0511-18460]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="211" width="555" height="21"/>
+				<reportElement positionType="Float" x="0" y="211" width="555" height="18"/>
 				<textElement>
 					<font isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Bei Änderungen bitte das Büro benachrichtigen!]]></text>
 			</staticText>
 			<image onErrorType="Blank">
-				<reportElement positionType="Float" x="318" y="1" width="237" height="198"/>
+				<reportElement positionType="Float" x="328" y="1" width="227" height="198"/>
 				<imageExpression class="java.io.InputStream"><![CDATA[$P{REPORT_PARAMETERS_MAP}.get("logo")]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<detail>
-		<band height="22" splitType="Stretch">
+		<band height="18" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="82" y="5" width="96" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="82" y="3" width="96" height="14" isRemoveLineWhenBlank="true"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.firstName}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="5" width="58" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="3" width="58" height="14" isRemoveLineWhenBlank="true"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.birthday}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="236" y="5" width="110" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="236" y="3" width="110" height="14" isRemoveLineWhenBlank="true"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact1}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="346" y="5" width="111" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="346" y="3" width="111" height="14" isRemoveLineWhenBlank="true"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact2}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="457" y="5" width="98" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="457" y="3" width="98" height="14" isRemoveLineWhenBlank="true"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact3}]]></textFieldExpression>
 			</textField>
