--- a/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
+++ b/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
@@ -3,98 +3,20 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["/daten/source/web-address-book/src/java/org/zephyrsoft/wab/report/"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-     family.`last_name` AS "family.lastName",
-     family.`street` AS "family.street",
-     family.`postal_code` AS "family.postalCode",
-     family.`city` AS "family.city",
-     family.`contact1` AS "family.contact1",
-     family.`contact2` AS "family.contact2",
-     family.`contact3` AS "family.contact3",
-     family.`remarks` AS "family.remarks",
-     person.`remarks` AS "person.remarks",
-     person.`contact3` AS "person.contact3",
-     person.`contact2` AS "person.contact2",
-     person.`contact1` AS "person.contact1",
-     person.`birthday` AS "person.birthday",
-     person.`last_name` AS "person.lastName",
-     person.`first_name` AS "person.firstName",
-     family.`id` AS "family.id",
-     person.`id` AS "person.id"
-FROM
-     `family` family INNER JOIN `person` person ON family.`id` = person.`family_id`]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="family.lastName" class="java.lang.String"/>
-	<field name="family.street" class="java.lang.String"/>
-	<field name="family.postalCode" class="java.lang.String"/>
-	<field name="family.city" class="java.lang.String"/>
-	<field name="family.contact1" class="java.lang.String"/>
-	<field name="family.contact2" class="java.lang.String"/>
-	<field name="family.contact3" class="java.lang.String"/>
-	<field name="family.remarks" class="java.lang.String"/>
-	<field name="person.remarks" class="java.lang.String"/>
-	<field name="person.contact3" class="java.lang.String"/>
-	<field name="person.contact2" class="java.lang.String"/>
-	<field name="person.contact1" class="java.lang.String"/>
-	<field name="person.birthday" class="java.lang.String"/>
-	<field name="person.lastName" class="java.lang.String"/>
-	<field name="person.firstName" class="java.lang.String"/>
-	<field name="family.id" class="java.lang.Integer"/>
-	<field name="person.id" class="java.lang.Integer"/>
-	<sortField name="family.lastName"/>
-	<sortField name="person.firstName"/>
-	<group name="family_id" keepTogether="true">
-		<groupExpression><![CDATA[$F{family.id}]]></groupExpression>
-		<groupHeader>
-			<band height="33">
-				<line>
-					<reportElement x="0" y="0" width="555" height="1"/>
-				</line>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="4" width="178" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.lastName}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="4" width="210" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.street}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="388" y="4" width="47" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.postalCode}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="435" y="4" width="120" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.city}]]></textFieldExpression>
-				</textField>
-				<line>
-					<reportElement positionType="Float" x="0" y="18" width="555" height="1" forecolor="#FFFFFF"/>
-				</line>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="82" y="19" width="157" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact1}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="236" y="19" width="157" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact2}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="393" y="19" width="162" height="14" isRemoveLineWhenBlank="true"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{family.contact3}]]></textFieldExpression>
-				</textField>
-			</band>
-		</groupHeader>
-		<groupFooter>
-			<band/>
-		</groupFooter>
-	</group>
+	<field name="lastName" class="java.lang.String"/>
+	<field name="street" class="java.lang.String"/>
+	<field name="postalCode" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="contact1" class="java.lang.String"/>
+	<field name="contact2" class="java.lang.String"/>
+	<field name="contact3" class="java.lang.String"/>
+	<field name="members" class="net.sf.jasperreports.engine.JRDataSource"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -150,35 +72,53 @@ Tel. Gemeindecafé - 0511-1319710]]></text>
 		</band>
 	</title>
 	<detail>
-		<band height="18" splitType="Stretch">
+		<band height="48" splitType="Stretch">
+			<line>
+				<reportElement x="0" y="1" width="555" height="1" isPrintWhenDetailOverflows="true"/>
+			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="82" y="3" width="96" height="14" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="1" y="5" width="178" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.firstName}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{lastName}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="3" width="58" height="14" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="179" y="5" width="210" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.birthday}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{street}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="236" y="3" width="110" height="14" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="389" y="5" width="47" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact1}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{postalCode}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="346" y="3" width="111" height="14" isRemoveLineWhenBlank="true"/>
+				<reportElement positionType="Float" x="436" y="5" width="120" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact2}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="457" y="3" width="98" height="14" isRemoveLineWhenBlank="true"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{person.contact3}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{city}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="82" y="0" width="473" height="1"/>
+				<reportElement positionType="Float" x="1" y="19" width="555" height="1" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF"/>
 			</line>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement positionType="Float" x="83" y="20" width="157" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{contact1}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement positionType="Float" x="237" y="20" width="157" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{contact2}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement positionType="Float" x="394" y="18" width="162" height="14" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{contact3}]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement positionType="Float" x="1" y="34" width="555" height="14" isPrintWhenDetailOverflows="true"/>
+				<dataSourceExpression><![CDATA[$F{members}]]></dataSourceExpression>
+				<subreportExpression class="java.lang.String"><![CDATA[$P{SUBREPORT_DIR} + "person.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 	<pageFooter>
