changed report header
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@283 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
+++ b/web-address-book/src/java/org/zephyrsoft/wab/report/print.jrxml
@@ -57,7 +57,7 @@ Tel. Gemeindecafé - 0511-1319710]]></text>
 			<staticText>
 				<reportElement positionType="Float" x="0" y="177" width="328" height="22"/>
 				<textElement/>
-				<text><![CDATA[Odeonstr. 6 - 30159 Hannover - Tel. 0511-18460]]></text>
+				<text><![CDATA[Odeonstr. 6 - 30159 Hannover - 0511-18460 - 0160-1008660]]></text>
 			</staticText>
 			<staticText>
 				<reportElement positionType="Float" x="0" y="211" width="555" height="18"/>
