modified header for SEPA
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@549 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/src/java/org/zephyrsoft/wab/report/print.jrxml
+++ b/src/java/org/zephyrsoft/wab/report/print.jrxml
@@ -43,7 +43,7 @@ Calvary Chapel Hannover]]></text>
 				<textElement/>
 				<text><![CDATA[Herrenstr. 10 - 30159 Hannover - office@koinonia-gemeinde.de
 Tel. Büro: 0511-1614643 - Fax 0511-1614639
-Konto-Nr. 616915 - EKK Hannover - BLZ 52060410
+IBAN: DE76 5206 0410 0000 6169 15 / BIC: GENODEF1EK1
 
 Tel. Gemeindecafé - 0511-1319710]]></text>
 			</staticText>
