update header data

--- a/src/main/resources/org/zephyrsoft/wab/report/print.jrxml
+++ b/src/main/resources/org/zephyrsoft/wab/report/print.jrxml
@@ -121,7 +121,7 @@ Tel. Gemeindecafé - 0511-1319710]]></text>
 					<textElement>
 						<font/>
 					</textElement>
-				<text><![CDATA[Odeonstr. 6 - 30159 Hannover - 0511-18460 - 0160-1008660]]></text>
+				<text><![CDATA[Odeonstr. 6 - 30159 Hannover - 0511-18460]]></text>
 				</staticText>
 				<staticText>
 					<reportElement
